[package]
name = "ffmpeg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
bindgen = "0.60.1"
convert_case = "0.5.0"