[package]
name = "ffmpeg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3"
paste = "1.0"
thiserror = "1.0"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
bindgen = "0.66"
convert_case = "0.6"
lazy_static = "1.4"
num_cpus = "1.16"